# KDDockWidgets

./: .clang-format  .clang-tidy  .clangd  .clazy  .cmake-format.py  .codespellrc  .gitignore  .gitmodules  .krazy  .mdlrc.rb  .pre-commit-config.yaml  .pylintrc  .qmllint.ini  .travis.yml  3RDPARTY.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-example.json  CONTRIBUTORS.txt  Changelog  LICENSE.GPL.txt  LICENSE.txt  README-Flutter.md  README-QtQuick.md  README-WASM.md  README-Wayland.md  README-bindings.md  README-porting.md  README.md  REUSE.toml  appveyor.yml  code.code-workspace  code.code-workspace.template  code.dev-qtquick.code-workspace  code.dev-qtwidgets.code-workspace  code.dev-qtwidgets6.code-workspace  code.dev.code-workspace  code.dev6.code-workspace  debian.changelog  dev-qtquick.code-workspace  (+12 more)
docs/api/: CMakeLists.txt  Doxyfile.cmake  Doxyfile.cmake.bak  footer.html
examples/basic/: CMakeLists.txt  ExampleDockableWidget.cpp  ExampleDockableWidget.h  main.cpp
examples/dockwidgets/: CMakeLists.txt  CtrlKeyEventFilter.h  ExampleDockableWidget.cpp  MyFrameworkWidgetFactory.cpp  MyFrameworkWidgetFactory.h  MyMainWindow.cpp  MyMainWindow.h  MyTitleBar_CSS.h  MyViewFactory.cpp  MyViewFactory.h  MyWidget.cpp  MyWidget.h  main.cpp
examples/dockwidgets_quick/: CMakeLists.txt  main.qml
examples/mdi_with_docking/: CMakeLists.txt  main.cpp
examples/minimal-mdi/: CMakeLists.txt  MyWidget.cpp  main.cpp
examples/qtquick/: CMakeLists.txt  Guest.qml  Guest1.qml  Guest2.qml  Guest3.qml  main.cpp  main.qml  resources_example.qrc  resources_qtquick_example.qrc
examples/vcpkg/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
kddwtest/: CMakeLists.txt  FloatingCloseRepro.qml  InitialSizeRepro.qml  Main.qml  MaximizeButtonRepro.qml  MdiRepro.qml  TitleBarMouseLeakRepro.qml  TitleBarThemeRepro.qml  main.cpp
python/: CMakeLists.txt  fixup.py
python/PyKDDockWidgets/: CMakeLists.txt  __init__.py  __init__.py.cmake  kddockwidgets_global.h  typesystem_kddockwidgets.xml
python/examples/: MyMainWindow.py  MyWidget.py  MyWidget1.py  MyWidget2.py  MyWidget3.py  main.py
python/examples-qt6/: MyMainWindow.py  MyWidget.py  MyWidget1.py  MyWidget2.py  MyWidget3.py  main.py
python/tests/: CMakeLists.txt  config.py.cmake  tst_importModule.py
src/: Action.cpp  Action.h  CMakeLists.txt  Config.cpp  Config.h  Controller.cpp  Controller.h  DebugWindow.cpp  DebugWindow_p.h  DockRegistry.cpp  DockRegistry.h  DockRegistry_p.h  DockWidget.cpp  DockWidget.h  DockWidgetBase.cpp  DockWidgetBase.h  DockWidgetQuick.cpp  DockWidgetQuick.h  DragController.cpp  DragController_p.h  Draggable.cpp  Draggable_p.h  DropArea.cpp  DropAreaWithCentralFrame.cpp  DropAreaWithCentralFrame_p.h  DropArea_p.h  DropIndicatorOverlayInterface.cpp  DropIndicatorOverlayInterface_p.h  EventFilterInterface.h  FloatingWindow.cpp  FloatingWindow_p.h  FocusScope.cpp  FocusScope.h  Frame.cpp  Frame_p.h  FrameworkWidgetFactory.cpp  FrameworkWidgetFactory.h  KDDockWidgets.cpp  KDDockWidgets.h  KDDockWidgetsConfig.cmake.in  (+61 more)
src/controllers/: DockWidget.cpp  DockWidget.h  DockWidget_p.h  DropArea.cpp  DropArea.h  DropIndicatorOverlay.cpp  DropIndicatorOverlay.h  FloatingWindow.cpp  FloatingWindow.h  Frame.cpp  Frame.h  Group.cpp  Group.h  Layout.cpp  Layout.h  MDILayout.cpp  MDILayout.h  MainWindow.cpp  MainWindow.h  MainWindowBase.cpp  Separator.cpp  Separator.h  SideBar.cpp  SideBar.h  Stack.cpp  Stack.h  TabBar.cpp  TabBar.h  TitleBar.cpp  TitleBar.h
src/core/: Action.cpp  Action.h  Action_p.h  Controller.cpp  Controller.h  Controller_p.h  DelayedCall.cpp  DelayedCall.h  DelayedCall_p.h  DockRegistry.cpp  DockRegistry.h  DockRegistry_p.h  DockWidget.cpp  DockWidget.h  DockWidget_p.h  DragController.cpp  DragControllerWayland_p.cpp  DragControllerWayland_p.h  DragController_p.h  Draggable.cpp  Draggable_p.h  DropArea.cpp  DropArea.h  DropIndicatorOverlay.cpp  DropIndicatorOverlay.h  DropIndicatorOverlay_p.h  EventFilterInterface.h  FloatingWindow.cpp  FloatingWindow.h  FloatingWindow_p.h  FocusScope.cpp  FocusScope.h  Group.cpp  Group.h  Group_p.h  Layout.cpp  Layout.h  LayoutSaver_p.h  Layout_p.h  Logging.cpp  (+51 more)
src/dummy/: Platform_dummy.cpp  Platform_dummy.h  TestHelpers_dummy.cpp  ViewFactory_dummy.cpp  ViewFactory_dummy.h  Window_dummy.cpp  Window_dummy.h
src/flutter/: Action.cpp  Action.h  CoRoutines.cpp  CoRoutines.h  Platform.cpp  Platform.h  Platform_flutter.cpp  Platform_flutter.h  Screen.cpp  Screen.h  TestHelpers.cpp  TestHelpers_flutter.cpp  ViewFactory.cpp  ViewFactory.h  ViewFactory_flutter.cpp  ViewFactory_flutter.h  Window.cpp  Window.h  Window_flutter.cpp  Window_flutter.h  Window_p.h  bindings_global.h  create_pub_upgrade_pr.sh  dartagnan.json  kddw_bindings.cpp  kddw_bindings.h  license-file-template  pubspec.yaml  qcoro.h  refresh_bindings.dart  typesystem.xml  utils.dart
src/gtk/: Platform_gtk.cpp  Platform_gtk.h  TestHelpers_gtk.cpp  ViewFactory_gtk.cpp  ViewFactory_gtk.h  Window_gtk.cpp  Window_gtk.h
src/indicators/: AnimatedIndicators.cpp  AnimatedIndicators_p.h  ClassicIndicators.cpp  ClassicIndicators_p.h
src/multisplitter/: Anchor.cpp  AnchorGroup.cpp  AnchorGroup_p.h  Anchor_p.h  Item.cpp  Item_p.h  LayoutMemory.cpp  MultiSplitter.cpp  MultiSplitterLayout.cpp  MultiSplitterLayout_p.h  MultiSplitterWidget.cpp  MultiSplitterWidget_p.h  MultiSplitter_p.h  (+4 more)
tests/: CMakeLists.txt  Dockerfile  MyRectangle.qml  MyRectangle2.qml  Operations.cpp  Operations.h  Testing.cpp  Testing.h  anonymize_layout.dart  clang_format18_workaround.h  doctest_main.h  fatal_logger.cpp  fatal_logger.h  fuzzer.cpp  layout_fuzzer.dart  linter.json  main.h  main.qml  main2.qml  main343.qml  main343_2.qml  main350.qml  main465.qml  main_mdiInitialSize.qml  main_persistentCentralWidget.qml  main_titleBarHasMinimizeButton.qml  main_tst_focusBetweenTabs.qml  qml_standalone_test.qml  simple_test_framework.h  test_main_qt.h  test_resources.qrc  tests.h  tests_launcher.cpp  tests_main.h  tst_common.cpp  tst_docks.cpp  tst_docks.h  tst_docks_main.h  tst_docks_slow1.cpp  tst_docks_slow2.cpp  (+18 more)
(+1317 files in other folders)
